# reinforcement-PeRL-assignment

./: .gitattributes  README.md  readme.md
code/: docker-compose.yml  dspy_optimizer.py  inference.py  project.md  pyproject.toml  run_optimizer.py
code/core/: __init__.py  config.py  convert_postgres_to_sqlite.py  dataset.py  evaluation.py  logger.py  metric.py  modules.py  optimizer.py  signature.py  utiles.py
code/notebook/: dataset.ipynb  dspy.ipynb  dspy_first.ipynb  dspy_self.ipynb  reinforced_sql_agent.ipynb
code/notebook/BootstrapFewshot/: BootstrapFewShot.ipynb
code/notebook/GRPO/: GRPO.ipynb
code/notebook/MIPRO/: MIPROv2.ipynb
code/notebook/Q-learning/: q-learning-reinforced_sql_agent.ipynb
data/data/: BIRD.sqlite
data/logs/: best_model_step0_20251202_061457.json  best_model_step1_20251130_142544.json  bird_text2sql_copro_optimization_20251130_142328_epochs.csv  bird_text2sql_copro_optimization_20251130_143213_epochs.csv  bird_text2sql_copro_optimization_20251130_143213_full_history.csv  bird_text2sql_copro_optimization_20251130_143213_history.json  bird_text2sql_copro_optimization_20251130_143601_epochs.csv  bird_text2sql_copro_optimization_20251130_144117_epochs.csv  bird_text2sql_copro_optimization_20251130_152513_epochs.csv  bird_text2sql_copro_optimization_20251130_152939_epochs.csv  bird_text2sql_copro_optimization_20251130_153115_epochs.csv  bird_text2sql_copro_optimization_20251130_153115_full_history.csv  bird_text2sql_copro_optimization_20251130_153115_history.json  (+54 more)
presentation/: presentation.pptx  자연어처리.pptx
(+6 files in other folders)
